# canister_file_manager_native_app

./: README.md  cargo.toml  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  global.d.ts  main.tsx  styles.css
src/components/Bottombar/: Bottombar.tsx
src/components/GridViewer/: GridViewer.tsx
src/components/ListView/: ListView.tsx
src/components/Loading/: Loading.tsx
src/components/Topbar/: Topbar.tsx
src/context/: ChunkContext.tsx  GlobalContext.tsx
src/declarations/file_manager/: file_manager.did.d.ts  file_manager.did.js  index.d.ts  index.js
src/helpers/: fileHelper.ts  stringHelper.ts
src/misc/: methods.ts  theme.tsx
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/icons/: icon.icns
src/src-tauri/src/: lib.rs  main.rs
src/src-tauri/src/helpers/: canister_helper.rs  filesystem_helper.rs
src/src-tauri/src/logic/: canister_methods.rs  filesystem_methods.rs
src/src-tauri/src/models/: asset_models.rs  misc_models.rs
