[package]
name = "file_manager"
version = "0.0.0"
description = "File hosting on the internet computer"
authors = ["rem.codes"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "os-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-agent = "0.23.2"
candid = "0.8.4"
dirs = "4.0.0"
mime_guess = "2.0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
